# mitre-attack-orchestrator

./: .gitignore  README.md  app_gradio.py  graph.py  main.py  pyproject.toml  requirements.txt
agents/: detect.py  ioc_extract.py  mitre.py  osint.py  prioritize.py
smoke_test/: e2e_smoke.py  smoke_test_ioc.py  smoke_test_mitre.py  smoke_test_osint.py
storage/: es.py  schema.py
